# Startup-success-prediction

./: .replit  LICENSE  app (2).py  app.py  currency_data.py  dashboard.py  database.py  industry_metrics.py  location_data.py  ml_model.py  pyproject.toml  replit.md  requirements.txt  utils.py
