[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "AI-powered Startup Success Predictor with ML models and analytics dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.51.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "sqlalchemy>=2.0.0",
    "pycountry>=24.6.1",
]
